--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <nav>
             <ul class="social-icons">
-                <li><a href="https://twitter.com/spinningorilla_" class="icon brands fa-twitter" target="_blank"><i class="fab fa-twitter"></i><span class="label">Twitter</span></a></li>
-                <li><a href="https://t.me/+SdPhSvjYA-U3YmQ0" class="icon brands fa-telegram" target="_blank"><i class="fab fa-telegram-plane"></i><span class="label">Telegram</span></a></li>
+                <li><a href="https://x.com/360kong" class="icon brands fa-twitter" target="_blank"><i class="fab fa-twitter"></i><span class="label">Twitter</span></a></li>
+                <li><a href="https://t.me/kongthreesixty" class="icon brands fa-telegram" target="_blank"><i class="fab fa-telegram-plane"></i><span class="label">Telegram</span></a></li>
                 <h1>360 kong</h1>
             </ul>
         </nav>
